--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/erp_student
+MONGODB_URI=mongodb+srv://aarjav100jain:gwfoQcy4rKpUI021@cluster0.ovx72vk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key_here
