--- a/backend/env.example
+++ b/backend/env.example
@@ -2,29 +2,21 @@
 PORT=5000
 NODE_ENV=development
 
-# Database Configuration
-# Local MongoDB (for development)
+# MongoDB Connection
 MONGODB_URI=mongodb://localhost:27017/erp_system
 
-# MongoDB Atlas (for production/cloud) - Uncomment and replace with your connection string
-# MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority
-
-# MongoDB Compass Connection String Examples:
-# Local: mongodb://localhost:27017/erp_system
-# Atlas: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority
-
 # JWT Configuration
-JWT_SECRET=your_jwt_secret_key_here
+JWT_SECRET=your-super-secret-jwt-key-here
 JWT_EXPIRES_IN=7d
 
 # Email Configuration (for OTP and notifications)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_app_password_here
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
 
 # Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://localhost:3000
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
