--- a/backend/env.example
+++ b/backend/env.example
@@ -2,8 +2,20 @@
 PORT=5000
 NODE_ENV=development
 
-# MongoDB Connection
-MONGODB_URI=mongodb://localhost:27017/erp_system
+# MongoDB Connection (choose ONE):
+# For local MongoDB
+# MONGODB_URI=mongodb://localhost:27017
+
+# For MongoDB Atlas (preferred). Replace <user>, <pass>, and <cluster>.
+# MONGODB_URI=mongodb+srv://<user>:<pass>@<cluster>.mongodb.net
+
+# Database name
+MONGODB_DB=erp_system
+
+# Optional connection tuning
+MONGODB_MAX_RETRIES=5
+MONGODB_SERVER_SELECTION_MS=15000
+MONGODB_SOCKET_TIMEOUT_MS=45000
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
