--- a/backend/.env
+++ b/backend/.env
@@ -1,23 +1,24 @@
-# Server Configuration
+# Server
 PORT=5000
 NODE_ENV=development
 
-# Database Configuration
-MONGODB_URI=mongodb+srv://aarjav100jain:gwfoQcy4rKpUI021@cluster0.ovx72vk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MongoDB Connection
+MONGODB_URI=mongodb+srv://aarjav100jain_db_user:QYUk2MC5q8YG9l6s@cluster0.cspq9lf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret_key_here
+JWT_SECRET=your-super-secret-jwt-key-here
 JWT_EXPIRES_IN=7d
 
 # Email Configuration (for OTP and notifications)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_app_password_here
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
 
 # Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://localhost:3000
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100 
+RATE_LIMIT_MAX_REQUESTS=100
+
